// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TwoFactorAuthModal render should render with secret and QR code 1`] = `
<div
  class="modal is-active is-dark"
>
  <div
    class="modal-background"
  />
   
  <div
    class="modal-logo"
  />
   
  <div
    class="modal-card"
  >
    <div
      class="modal-card-head"
    >
      <h3
        class="modal-card-title"
      >
        Two Factor Authentication
      </h3>
       
      <button
        class="delete is-large"
      />
    </div>
     
    <div
      class="modal-card-body"
    >
       
      <div>
        <p
          class="lead"
        >
          To protect your account, we strongly recommend enabling
    two factor authentication. Once enabled, you will be able to log in by
    entering a code generated by an authenticator app.
        </p>
         
        <p
          class="lead"
        >
          Scan the QR code below into 
          <strong>
            Google
    Authenticator
          </strong>
          . If you are unable to scan the code, you can
    also enter the secret manually.
        </p>
      </div>
       
      <form
        class="control"
        id="twoFactorAuth"
      >
        <div
          class="field"
        >
          <div
            class="has-text-centered"
          >
            <img
              src="https://chart.googleapis.com/chart?chs=166x166&chld=L|0&cht=qr&chl=otpauth://totp/Endpass:email?secret=secret"
            />
          </div>
           
          <p
            class="subtitle"
          >
            Write down the recovery secret below:
          </p>
           
          <label
            class="label"
          >
            Secret
          </label>
           
          <p
            class="subtitle twofa-secret"
          >
            <strong>
              secret
            </strong>
          </p>
        </div>
         
        <p
          class="subtitle"
        >
          Enter the 6 digit code generated by your
    authenticator app.
        </p>
         
        <div
          aria-invalid="true"
          aria-required="true"
          class="field"
        >
          <label
            class="label"
          >
            Verification Code
          </label>
           
          <div
            class="field"
          >
            <div
              class="control"
            >
              <input
                autofocus="autofocus"
                class="input"
                data-test="input-two-auth-code"
                name="verificationCode"
                size="6"
                type="number"
              />
               
            </div>
             
            <!---->
          </div>
           
          <!---->
        </div>
      </form>
       
    </div>
     
    <div
      class="modal-card-foot"
    >
      <div
        class="buttons"
      >
        <div
          class="field"
        >
          <div
            class="control"
          >
            <button
              class="button is-primary is-medium"
              data-test="submit-two-auth-modal"
              disabled="disabled"
              form="twoFactorAuth"
            >
              
      Verify
    
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TwoFactorAuthModal render should render without secret and QR code 1`] = `
<div
  class="modal is-active is-dark"
>
  <div
    class="modal-background"
  />
   
  <div
    class="modal-logo"
  />
   
  <div
    class="modal-card"
  >
    <div
      class="modal-card-head"
    >
      <h3
        class="modal-card-title"
      >
        Two Factor Authentication
      </h3>
       
      <button
        class="delete is-large"
      />
    </div>
     
    <div
      class="modal-card-body"
    >
       
      <!---->
       
      <form
        class="control"
        id="twoFactorAuth"
      >
        <!---->
         
        <p
          class="subtitle"
        >
          Enter the 6 digit code generated by your
    authenticator app.
        </p>
         
        <div
          aria-invalid="true"
          aria-required="true"
          class="field"
        >
          <label
            class="label"
          >
            Verification Code
          </label>
           
          <div
            class="field"
          >
            <div
              class="control"
            >
              <input
                autofocus="autofocus"
                class="input"
                data-test="input-two-auth-code"
                name="verificationCode"
                size="6"
                type="number"
              />
               
            </div>
             
            <!---->
          </div>
           
          <!---->
        </div>
      </form>
       
    </div>
     
    <div
      class="modal-card-foot"
    >
      <div
        class="buttons"
      >
        <div
          class="field"
        >
          <div
            class="control"
          >
            <button
              class="button is-primary is-medium"
              data-test="submit-two-auth-modal"
              disabled="disabled"
              form="twoFactorAuth"
            >
              
      Verify
    
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TwoFactorAuthModal render should render without secret and QR code 2`] = `
<div
  class="modal is-active is-dark"
>
  <div
    class="modal-background"
  />
   
  <div
    class="modal-logo"
  />
   
  <div
    class="modal-card"
  >
    <div
      class="modal-card-head"
    >
      <h3
        class="modal-card-title"
      >
        Two Factor Authentication
      </h3>
       
      <button
        class="delete is-large"
      />
    </div>
     
    <div
      class="modal-card-body"
    >
       
      <div>
        <p
          class="lead"
        >
          To protect your account, we strongly recommend enabling
    two factor authentication. Once enabled, you will be able to log in by
    entering a code generated by an authenticator app.
        </p>
         
        <p
          class="lead"
        >
          Scan the QR code below into 
          <strong>
            Google
    Authenticator
          </strong>
          . If you are unable to scan the code, you can
    also enter the secret manually.
        </p>
      </div>
       
      <form
        class="control"
        id="twoFactorAuth"
      >
        <!---->
         
        <p
          class="subtitle"
        >
          Enter the 6 digit code generated by your
    authenticator app.
        </p>
         
        <div
          aria-invalid="true"
          aria-required="true"
          class="field"
        >
          <label
            class="label"
          >
            Verification Code
          </label>
           
          <div
            class="field"
          >
            <div
              class="control"
            >
              <input
                autofocus="autofocus"
                class="input"
                data-test="input-two-auth-code"
                name="verificationCode"
                size="6"
                type="number"
              />
               
            </div>
             
            <!---->
          </div>
           
          <!---->
        </div>
      </form>
       
    </div>
     
    <div
      class="modal-card-foot"
    >
      <div
        class="buttons"
      >
        <div
          class="field"
        >
          <div
            class="control"
          >
            <button
              class="button is-primary is-medium"
              data-test="submit-two-auth-modal"
              disabled="disabled"
              form="twoFactorAuth"
            >
              
      Verify
    
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TwoFactorAuthModal render should render without secret and QR code 3`] = `
<div
  class="modal is-active is-dark"
>
  <div
    class="modal-background"
  />
   
  <div
    class="modal-logo"
  />
   
  <div
    class="modal-card"
  >
    <div
      class="modal-card-head"
    >
      <h3
        class="modal-card-title"
      >
        Two Factor Authentication
      </h3>
       
      <button
        class="delete is-large"
      />
    </div>
     
    <div
      class="modal-card-body"
    >
       
      <!---->
       
      <form
        class="control"
        id="twoFactorAuth"
      >
        <!---->
         
        <p
          class="subtitle"
        >
          Enter the 6 digit code generated by your
    authenticator app.
        </p>
         
        <div
          aria-invalid="true"
          aria-required="true"
          class="field"
        >
          <label
            class="label"
          >
            Verification Code
          </label>
           
          <div
            class="field"
          >
            <div
              class="control"
            >
              <input
                autofocus="autofocus"
                class="input"
                data-test="input-two-auth-code"
                name="verificationCode"
                size="6"
                type="number"
              />
               
            </div>
             
            <!---->
          </div>
           
          <!---->
        </div>
      </form>
       
    </div>
     
    <div
      class="modal-card-foot"
    >
      <div
        class="buttons"
      >
        <div
          class="field"
        >
          <div
            class="control"
          >
            <button
              class="button is-primary is-medium"
              data-test="submit-two-auth-modal"
              disabled="disabled"
              form="twoFactorAuth"
            >
              
      Verify
    
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
